#137_#127-POST-Route-für-Luftfeuchtigkeit-und-Swagger-Doku-angepasst
