# docs/Swagger/BlickboxAPI.yaml
@@ -11,7 +11,7 @@ info:
     email: aronseidl17@gmail.com
   version: 1.0.0
 servers:
-  - url: http://maytastix.de:5000/iot/api
+  - url: https://dhbwapi.maytastix.de/iot/api
 tags:
   - name: pingDB
     description: Verbindung zur Datenbank
@@ -100,7 +100,7 @@ paths:
       summary: Ein neuen Temperatur Wert hinzufügen
       description: Füg einen neuen Temperatur Wert hinzu.
       requestBody:
-        description: Erstekke einen neuen Temperatur Wert
+        description: Erstelle einen neuen Temperatur Wert
         content:
           application/json:
             schema:
@@ -130,7 +130,43 @@ paths:
                     example: 'Falscher Input'
         '500':
           description: Interner Fehler
+  /insert/air-humidity:
+    post:
+      tags:
+        - insert
+      summary: Ein neuer Luftfeuchtigkeits Wert hinzufügen
+      description: Füg einen neuen Luftfeuchtigkeits Wert hinzu.
+      requestBody:
+        description: Erstelle einen neuen Luftfeuchtigkeits Wert
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Luftfeuchtigkeit'
+        required: true
+      responses:
+        '200':
+          description: Wert erfolgreich eingefügt
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 'Daten erfolgreich eingefügt'         
 
+        '400':
+          description: Falscher Input
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 'Falscher Input'
+        '500':
+          description: Interner Fehler
 components:
   schemas:
     Temperature:
@@ -141,3 +177,11 @@ components:
         temperature:
           type: number
           example: 27.8
+    Luftfeuchtigkeit:
+      required:
+        - air-humidity
+      type: object
+      properties:
+        air-humidity:
+          type: number
+          example: 13.2
